--- a/.github/workflows/ogp_builder.yml
+++ b/.github/workflows/ogp_builder.yml
@@ -35,7 +35,7 @@ jobs:
         env:
           TZ: Asia/Tokyo
       - run: pip3 install selenium
-      - run: (python3 -m http.server -d ./dist 8000 &)  ; python3 ./ui-test/ogp_screenshot.py
+      - run: (ruby -run -ehttpd ./dist -p8000 &) ; python3 ./ui-test/ogp_screenshot.py
       - name: Upload screenshot
         uses: actions/upload-artifact@v1
         with:
