OGP画像生成workflowの調整
#768

調整中

--- a/.github/workflows/ogp_builder.yml
+++ b/.github/workflows/ogp_builder.yml
@@ -1,7 +1,7 @@
 name: OGP Builder
 
 on:
-  pull_request:
+  push:
     branches:
       - master
   repository_dispatch:
@@ -11,9 +11,13 @@ jobs:
   build:
     runs-on: macos-latest
     steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - uses: actions/checkout@v2
         with:
-          ref: master
+          ref: ${{ steps.extract_branch.outputs.branch }}
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -35,7 +39,7 @@ jobs:
         env:
           TZ: Asia/Tokyo
       - run: pip3 install selenium
-      - run: (python3 -m http.server --directory ./dist 8000 &) ; python3 ./ui-test/ogp_screenshot.py
+      - run: (python3 -m http.server --directory ./dist 8000 &)  ; python3 ./ui-test/ogp_screenshot.py
       - name: Upload screenshot
         uses: actions/upload-artifact@v1
         with:
@@ -45,9 +49,13 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Extract branch name
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+        id: extract_branch
       - uses: actions/checkout@v2
         with:
-          ref: master
+          ref: ${{ steps.extract_branch.outputs.branch }}
       - name: Download ogp images
         uses: actions/download-artifact@v1
         with:
@@ -63,4 +71,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
+          branch: ${{ steps.extract_branch.outputs.branch }}
