--- a/.github/workflows/on_push_to_dev_and_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_push_to_dev_and_dispatch_from_googleSheetsMenu_development.yml
@@ -3,7 +3,7 @@ name: googleSheetMenu_development
 on:
   push:
     branches:
-      - master
+      - development
   repository_dispatch:
     types: [googleSheetMenu]
 
