--- a/.github/workflows/on_push_to_dev_and_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_push_to_dev_and_dispatch_from_googleSheetsMenu_development.yml
@@ -35,10 +35,13 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: development
-  generate_ogp:
+  generate_ogp_development:
     runs-on: macos-latest
     needs: update_json_development
     steps:
+      - name: Setup Timezone
+        run: |
+          sudo systemsetup -settimezone Asia/Tokyo
       - uses: actions/checkout@v2
         with:
           ref: development
@@ -64,19 +67,19 @@ jobs:
       - run: pip3 install selenium
       - run: (python3 -m http.server --directory ./dist 8000 &)  ; python3 ./ui-test/ogp_screenshot.py
       - name: Upload screenshot
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: ogp
           path: ogp
   commit_ogp_development:
-    needs: generate_ogp
     runs-on: ubuntu-18.04
+    needs: generate_ogp_development
     steps:
       - uses: actions/checkout@v2
         with:
           ref: development
       - name: Download ogp images
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v2
         with:
           name: ogp
       - name: Commit files
