--- a/.github/workflows/on_push_to_master_and_on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_push_to_master_and_on_dispatch_from_googleSheetsMenu_master.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
-  generate_ogp:
+  generate_ogp_master:
     runs-on: macos-latest
     needs: update_json_master
     steps:
@@ -73,11 +73,8 @@ jobs:
           path: ogp
   commit_ogp_master:
     runs-on: ubuntu-18.04
-    needs: generate_ogp
+    needs: generate_ogp_master
     steps:
-      - name: Setup Timezone
-        run: |
-          sudo timedatectl set-timezone Asia/Tokyo
       - uses: actions/checkout@v2
         with:
           ref: master
@@ -132,7 +129,7 @@ jobs:
           GOOGLE_ANALYTICS_ID: ${{ secrets.GOOGLE_ANALYTICS_ID }}
           TZ: Asia/Tokyo
       - name: archive dist
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: dist
           path: dist
