googleSheetMenuWithoutOGP で development にも json をコミットする

--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
@@ -2,7 +2,7 @@ name: googleSheetMenu_development
 
 on:
   repository_dispatch:
-    types: [googleSheetMenu]
+    types: [googleSheetMenu, googleSheetMenuWithoutOGP]
 
 jobs:
   update_json_development:
