--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint": "eslint './**/*.{js,ts,vue}'",
     "lint:fix": "eslint './**/*.{js,ts,vue}' --fix",
     "stylelint": "stylelint '**/*.{css,scss,vue}'",
-    "stylelint:fix": "stylelint --fix '**/*.{css,scss,vue}'",
-    "clean-hardsource": "rimraf ./node_modules/.cache/hard-source"
+    "stylelint:fix": "stylelint --fix '**/*.{css,scss,vue}'"
   },
   "lint-staged": {
     "*.{js,ts,css,vue}": [
@@ -76,7 +75,6 @@
     "nuxt-purgecss": "1.0.0",
     "nuxt-svg-loader": "1.2.0",
     "prettier": "2.0.5",
-    "rimraf": "3.0.2",
     "stylelint": "13.6.1",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
