check_broken_links は update_json_development の後に実行する

--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
@@ -34,6 +34,7 @@ jobs:
           branch: development
   check_broken_links:
     runs-on: ubuntu-18.04
+    needs: update_json_development
     steps:
       - uses: actions/checkout@v2
         with:
