--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "nodemon": "2.0.4",
     "nuxt-purgecss": "1.0.0",
     "nuxt-svg-loader": "1.2.0",
+    "nuxt-webfontloader": "^1.1.0",
     "prettier": "2.0.5",
     "stylelint": "13.6.1",
     "stylelint-config-prettier": "8.0.2",
