package のアップデート
Major Update
- core-js 2 -> 3
- typescript-runtime 1 -> 2
- typescript 3.9 -> 4.0

Minor Update
- nuxt 2.14.1 -> 2.14.8

--- a/.babelrc
+++ b/.babelrc
@@ -6,10 +6,10 @@
           "@babel/preset-env",
           {
             "useBuiltIns": "usage",
-            "corejs": 3,
-          },
-        ],
+            "corejs": 3
+          }
+        ]
       ]
-    },
-  },
+    }
+  }
 }
