--- a/package.json
+++ b/package.json
@@ -33,54 +33,55 @@
     }
   },
   "dependencies": {
-    "@nuxt/types": "2.14.1",
-    "@nuxt/typescript-runtime": "1.0.0",
+    "@nuxt/types": "2.14.8",
+    "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/dotenv": "1.4.1",
-    "@nuxtjs/pwa": "3.0.0-beta.20",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "axe-core": "4.0.1",
-    "chart.js": "2.9.3",
+    "@nuxtjs/pwa": "3.0.2",
+    "@nuxtjs/sitemap": "2.4.0",
+    "axe-core": "4.1.1",
+    "chart.js": "2.9.4",
     "cross-env": "7.0.2",
-    "dayjs": "1.8.33",
-    "nuxt": "2.14.1",
-    "nuxt-i18n": "6.13.8",
-    "vue": "2.6.11",
-    "vue-chartjs": "3.5.0",
+    "dayjs": "1.9.6",
+    "nuxt": "2.14.8",
+    "nuxt-i18n": "6.15.4",
+    "vue": "2.6.12",
+    "vue-chartjs": "3.5.1",
     "vue-meta": "2.4.0",
-    "vue-scrollto": "2.18.2",
+    "vue-scrollto": "2.20.0",
     "vue-spinner": "1.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.11.1",
+    "@babel/core": "7.12.9",
+    "@babel/runtime-corejs3": "7.12.5",
     "@fullhuman/postcss-purgecss": "2.3.0",
     "@mdi/font": "5.5.55",
-    "@nuxt/typescript-build": "2.0.2",
+    "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config": "3.1.0",
     "@nuxtjs/eslint-config-typescript": "3.0.0",
     "@nuxtjs/google-analytics": "2.4.0",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.2",
-    "@types/chart.js": "2.9.23",
-    "@vue/test-utils": "1.0.3",
+    "@types/chart.js": "2.9.28",
+    "core-js": "3.7.0",
     "autoprefixer": "9.8.6",
-    "eslint": "7.6.0",
-    "eslint-config-prettier": "6.11.0",
+    "eslint": "7.14.0",
+    "eslint-config-prettier": "6.15.0",
     "eslint-plugin-prettier": "3.1.4",
-    "eslint-plugin-tsdoc": "0.2.6",
-    "husky": "4.2.5",
-    "lint-staged": "10.2.11",
+    "eslint-plugin-tsdoc": "0.2.8",
+    "husky": "4.3.0",
+    "lint-staged": "10.5.2",
     "nodemon": "2.0.4",
     "nuxt-purgecss": "1.0.0",
     "nuxt-svg-loader": "1.2.0",
-    "nuxt-webfontloader": "^1.1.0",
-    "prettier": "2.0.5",
-    "stylelint": "13.6.1",
+    "nuxt-webfontloader": "1.1.0",
+    "prettier": "2.2.1",
+    "stylelint": "13.8.0",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
-    "ts-loader": "8.0.2",
-    "typescript": "3.9.7",
-    "vue-axe": "2.4.0",
-    "vue-template-compiler": "2.6.11"
+    "ts-loader": "8.0.11",
+    "typescript": "4.0.5",
+    "vue-axe": "2.4.3",
+    "vue-template-compiler": "2.6.12"
   }
 }
