--- a/.github/workflows/on_pr_to_stage_audit-staging.yml
+++ b/.github/workflows/on_pr_to_stage_audit-staging.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          node-version: "14"
       - run: npm install -g csv2md
 
       # https://stedolan.github.io/jq/manual/
