AppLink.vueの採用 / mdi-jsの採用
https://github.com/tokyo-metropolitan-gov/covid19/pull/5314
https://github.com/tokyo-metropolitan-gov/covid19/pull/5715

--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@nuxtjs/dotenv": "1.4.1",
     "@nuxtjs/pwa": "3.3.2",
     "@nuxtjs/sitemap": "2.4.0",
-    "axe-core": "4.1.1",
     "chart.js": "2.9.4",
     "cross-env": "7.0.3",
     "dayjs": "1.9.6",
@@ -53,8 +52,7 @@
   "devDependencies": {
     "@babel/core": "7.12.9",
     "@babel/runtime-corejs3": "7.12.5",
-    "@fullhuman/postcss-purgecss": "2.3.0",
-    "@mdi/font": "5.8.55",
+    "@mdi/js": "^5.8.55",
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config": "5.0.0",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
@@ -62,7 +60,7 @@
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.2",
     "@types/chart.js": "2.9.28",
-    "autoprefixer": "9.8.6",
+    "axe-core": "4.1.1",
     "core-js": "3.8.0",
     "eslint": "7.14.0",
     "eslint-config-prettier": "6.15.0",
