fix: generate_ogp => build_and_deploy

--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
@@ -94,7 +94,7 @@ jobs:
           branch: master
   build_and_deploy_production:
     runs-on: ubuntu-18.04
-    needs: generate_ogp_master
+    needs: commit_ogp_master
     steps:
       - name: Setup Timezone
         run: |
