--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
@@ -57,7 +57,7 @@ jobs:
           cp -rp ogp static/
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git status | grep modified && git add . && git commit -v -m "[Bot] update data/*.json and OGP at $(date +'%Y-%m-%dT%H:%M:%S%z')"
+          git status | grep modified && git add data static && git commit -v -m "[Bot] update data/*.json and static/ogp at $(date +'%Y-%m-%dT%H:%M:%S%z')"
       - name: Push changes to master
         uses: ad-m/github-push-action@master
         with:
