--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
@@ -61,6 +61,7 @@ jobs:
         run: (python3 -m http.server --directory ./dist 8000 &) ; python3 ./ui-test/ogp_screenshot.py
       - name: Commit OGP & JSON files to master
         run: |
+          cp -rp ogp dist/
           cp -rp ogp static/
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
@@ -70,11 +71,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: master
-      - name: yarn run generate:deploy with OGP for production
-        run: |
-          yarn run generate:deploy --fail-on-page-error
-        env:
-          TZ: Asia/Tokyo
       - name: production deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
