--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
@@ -68,6 +68,15 @@ jobs:
           curl -o data/positive_rate.json https://raw.githubusercontent.com/suzuryo/covid19-iwate-data-bot/gh-pages/positive_rate.json
           curl -o data/positive_status.json https://raw.githubusercontent.com/suzuryo/covid19-iwate-data-bot/gh-pages/positive_status.json
           curl -o data/news.json https://raw.githubusercontent.com/suzuryo/covid19-iwate-data-bot/gh-pages/news.json
+      - name: Commit JSON files to development
+        run: |
+          git config --local user.name "data bot"
+          git status | grep modified && git add data && git commit -v -m "[Bot] update data/*.json at $(date +'%Y-%m-%dT%H:%M:%S%z')"
+      - name: Push changes to development
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: development
       - name: generate site
         run: |
           yarn run generate:deploy --fail-on-page-error
