--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "covid19",
   "version": "1.0.0",
-  "description": "岩手県 新型コロナウイルス感染症対策サイト",
+  "description": "岩手県 新型コロナウイルス感染症対策サイト 非公式",
   "author": "岩手県内有志",
   "private": true,
   "engines": {
