--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
@@ -14,6 +14,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: master
+      - name: Setup Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.7'
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -58,7 +62,7 @@ jobs:
       - name: install selenium
         run: pip3 install selenium
       - name: generate ogp
-        run: (python3 -m http.server --directory ./dist 8000 &) ; python3 ./ui-test/ogp_screenshot.py
+        run: (ruby -run -ehttpd ./dist -p8000 &) ; python3 ./ui-test/ogp_screenshot.py
       - name: Commit OGP & JSON files to master
         run: |
           cp -rp ogp dist/
