ruby -run -ehttpd にしても python -m http.server でも変わらなそうなので戻す

--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
@@ -14,10 +14,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: master
-      - name: Setup Ruby
-        uses: actions/setup-ruby@v1
-        with:
-          ruby-version: '2.7'
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
@@ -62,7 +58,7 @@ jobs:
       - name: install selenium
         run: pip3 install selenium
       - name: generate ogp
-        run: (ruby -run -ehttpd ./dist -p8000 &) ; python3 ./ui-test/ogp_screenshot.py
+        run: (python3 -m http.server --directory ./dist 8000 &) ; python3 ./ui-test/ogp_screenshot.py
       - name: Commit OGP & JSON files to master
         run: |
           cp -rp ogp dist/
