--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: development
-      - name: generate site
+      - name: yarn run generate:deploy for rspec
         run: |
           yarn run generate:deploy --fail-on-page-error
         env:
