git commit の title を修正

--- a/.github/workflows/on_dispatch_from_googleSheetsMenuWithoutOGP_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenuWithoutOGP_master.yml
@@ -59,7 +59,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git status | grep modified && git add data && git commit -v -m "[Bot] update data/*.json and static/ogp at $(date +'%Y-%m-%dT%H:%M:%S%z')"
+          git status | grep modified && git add data && git commit -v -m "[Bot] update data/*.json at $(date +'%Y-%m-%dT%H:%M:%S%z')"
       - name: Push changes to master
         uses: ad-m/github-push-action@master
         with:
