yarn dev と yarn dev-no-axe の時は開発用の nuxt.config.dev.ts を読み込む

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "node": ">=14.15.1"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt-ts",
-    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt-ts",
+    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt-ts --config-file nuxt.config.dev.ts",
+    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt-ts --config-file nuxt.config.dev.ts",
     "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production nuxt-ts start",
     "generate:deploy": "cross-env GENERATE_ENV=production nuxt-ts generate",
