workflowの名前を変更

--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
@@ -5,7 +5,7 @@ on:
     types: [googleSheetMenu, googleSheetMenuWithoutOGP]
 
 jobs:
-  check_broken_links:
+  rspec:
     runs-on: ubuntu-20.04
     steps:
       - name: Setup Timezone
