--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint": "7.16.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-prettier": "3.3.0",
+    "eslint-plugin-simple-import-sort": "5.0.3",
     "eslint-plugin-tsdoc": "0.2.10",
     "husky": "4.3.6",
     "lint-staged": "10.5.3",
