--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "@nuxt/types": "2.14.12",
     "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/dotenv": "1.4.1",
+    "@nuxtjs/pwa": "3.3.3",
     "@nuxtjs/sitemap": "2.4.0",
     "chart.js": "2.9.4",
     "cross-env": "7.0.3",
-    "dayjs": "1.9.8",
+    "dayjs": "1.10.2",
     "nuxt": "2.14.12",
-    "nuxt-i18n": "6.16.0",
+    "nuxt-i18n": "6.17.0",
     "vue": "2.6.12",
     "vue-chartjs": "3.5.1",
     "vue-meta": "2.4.0",
@@ -51,20 +52,19 @@
   "devDependencies": {
     "@babel/core": "7.12.10",
     "@babel/runtime-corejs3": "7.12.5",
-    "@mdi/js": "^5.8.55",
+    "@mdi/js": "5.8.55",
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config": "5.0.0",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/google-analytics": "2.4.0",
-    "@nuxtjs/pwa": "3.3.3",
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.2",
     "@types/chart.js": "2.9.29",
     "axe-core": "4.1.1",
-    "core-js": "3.8.1",
-    "eslint": "7.16.0",
+    "core-js": "3.8.2",
+    "eslint": "7.17.0",
     "eslint-config-prettier": "7.1.0",
-    "eslint-plugin-prettier": "3.3.0",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-simple-import-sort": "5.0.3",
     "eslint-plugin-tsdoc": "0.2.10",
     "husky": "4.3.6",
@@ -76,7 +76,7 @@
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
-    "ts-loader": "8.0.12",
+    "ts-loader": "8.0.14",
     "typescript": "4.1.3",
     "vue-axe": "2.4.4",
     "vue-template-compiler": "2.6.12"
