--- a/.github/workflows/on_pr_to_dev_reviewdog.yml
+++ b/.github/workflows/on_pr_to_dev_reviewdog.yml
@@ -16,6 +16,11 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.15.4'
+
       - uses: actions/cache@v2
         id: yarn-cache
         with:
