add parallels spec file path

--- a/.github/workflows/on_pr_to_dev_rspec.yml
+++ b/.github/workflows/on_pr_to_dev_rspec.yml
@@ -54,4 +54,4 @@ jobs:
           yarn run start &
       - name: rspec
         run: |
-          bundle exec parallel_rspec
+          bundle exec parallel_rspec spec
