--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_development.yml
@@ -79,4 +79,4 @@ jobs:
           yarn run start &
       - name: rspec
         run: |
-          bundle exec parallel_rspec
+          bundle exec parallel_rspec spec
