--- a/.github/workflows/on_pr_from_renovate_rspec.yml
+++ b/.github/workflows/on_pr_from_renovate_rspec.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   rspec:
-    if: contains(github.ref, 'refs/heads/renovate/')
+    if: startsWith(github.ref, 'refs/heads/renovate/')
     runs-on: ubuntu-20.04
     steps:
       - name: Setup Timezone
