--- a/.github/workflows/on_push_to_dev_rspec.yml
+++ b/.github/workflows/on_push_to_dev_rspec.yml
@@ -1,7 +1,7 @@
 name: on_pr_to_dev_rspec
 
 on:
-  pull_request:
+  push:
     branches:
       - development
 
@@ -14,8 +14,7 @@ jobs:
           sudo timedatectl set-timezone Asia/Tokyo
       - uses: actions/checkout@v2
         with:
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
+          ref: development
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
