--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "node": ">=14.16.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt-ts --config-file nuxt.config.dev.ts",
-    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt-ts --config-file nuxt.config.dev.ts",
-    "build": "nuxt-ts build",
-    "start": "cross-env NODE_ENV=production nuxt-ts start",
-    "generate:deploy": "cross-env GENERATE_ENV=production nuxt-ts generate",
-    "generate:dev": "cross-env GENERATE_ENV=development nuxt-ts generate",
-    "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
+    "dev": "cross-env NODE_ENV=development GENERATE_ENV=development nuxt --config-file nuxt.config.dev.ts",
+    "dev-no-axe": "cross-env NODE_ENV=dev-no-axe GENERATE_ENV=development nuxt --config-file nuxt.config.dev.ts",
+    "build": "nuxt build",
+    "start": "cross-env NODE_ENV=production nuxt start",
+    "generate:deploy": "cross-env GENERATE_ENV=production nuxt generate",
+    "generate:dev": "cross-env GENERATE_ENV=development nuxt generate",
+    "generate": "eslint './**/*.{js,ts,vue}' && nuxt generate",
     "test": "echo 'skip tests (there is no test)'",
     "lint": "eslint './**/*.{js,ts,vue}'",
     "lint:fix": "eslint './**/*.{js,ts,vue}' --fix",
