--- a/.github/workflows/on_pr_from_renovate_rspec.yml
+++ b/.github/workflows/on_pr_from_renovate_rspec.yml
@@ -27,7 +27,7 @@ jobs:
           path: |
             node_modules
             **/node_modules
-          key: ${{ runner.os }}-node-14-node_modules-${{ hashFiles('yarn.lock') }}
+          key: ${{ runner.os }}-node-14-16-node_modules-${{ hashFiles('yarn.lock') }}
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -36,7 +36,7 @@ jobs:
         id: yarn-cache
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-node-14-yarn-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-node-14-16-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: yarn install
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
