--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "nuxt-purgecss": "1.0.0",
     "nuxt-svg-loader": "1.2.0",
     "prettier": "2.2.1",
+    "sharp": "0.28.1",
     "stylelint": "13.13.1",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-standard": "22.0.0",
