update workflow ogp.png copy

--- a/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
+++ b/.github/workflows/on_dispatch_from_googleSheetsMenu_master.yml
@@ -67,6 +67,7 @@ jobs:
           node ./ui-test/ogp_composite_weekly_map.js
       - name: Commit OGP & JSON files to master
         run: |
+          cp -f static/ogp.png dist/ogp.png
           cp -rp ogp dist/
           cp -rp ogp static/
           git config --local user.email "action@github.com"
