--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nuxtjs/pwa": "3.3.5",
     "@nuxtjs/sitemap": "2.4.0",
     "chart.js": "2.9.4",
+    "chartjs-plugin-annotation": "0.5.7",
     "cross-env": "7.0.3",
     "d3": "6.7.0",
     "dayjs": "1.10.5",
@@ -61,6 +62,7 @@
     "@nuxtjs/stylelint-module": "4.0.0",
     "@nuxtjs/vuetify": "1.11.3",
     "@types/chart.js": "2.9.32",
+    "@types/chartjs-plugin-annotation": "0.5.1",
     "@types/d3": "6.7.0",
     "@types/topojson-client": "3.1.0",
     "axe-core": "4.2.1",
