--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dayjs": "1.10.5",
     "nuxt": "2.15.6",
     "nuxt-i18n": "6.27.0",
+    "pulltorefreshjs": "0.1.22",
     "topojson-client": "3.1.0",
     "vue": "2.6.12",
     "vue-chartjs": "3.5.1",
@@ -64,6 +65,7 @@
     "@types/chart.js": "2.9.32",
     "@types/chartjs-plugin-annotation": "0.5.1",
     "@types/d3": "6.7.0",
+    "@types/pulltorefreshjs": "0.1.4",
     "@types/topojson-client": "3.1.0",
     "axe-core": "4.2.1",
     "core-js": "3.13.1",
